--- a/index.css
+++ b/index.css
@@ -4,12 +4,20 @@
   background-color: #141947;
 }
 
-p {
+.hed {
+  margin-top: 10%;
+  display: flex;
+  justify-content: center;
+  border: 1px solid rgb(0, 255, 115);
+
+}
+
+.hed p {
   font-size: 15px;
   margin-top: 0px;
 }
 
-img {
+.hed img {
   width: 180px;
   margin-right: 10px;
   display: flex;
@@ -17,32 +25,33 @@ img {
   border-radius: 90px;
 }
 
-.hed {
-  margin-top: 10%;
-  display: flex;
-  justify-content: center;
-}
-
-.hed,
-h1 {
+.hed h1 {
   font-size: 40px;
   margin-bottom: 0px;
 }
 
-section div {
+.hed section div {
   margin: auto;
-  /* border: 1px solid rgb(255, 0, 0); Borde para visualización */
+  border: 1px solid rgb(255, 242, 0);
 }
 
-/* table, th{
-  
-  border: 1px solid rgb(255, 0, 0); /* Borde para visualización */
-/* } */ 
+table th {
+  border: 1px solid rgb(255, 0, 0);
+}
 
-.hed,
-section {
+.hed section {
   display: flex;
   justify-content: center;
   width: 100%;
-  /* border: 1px solid black; Borde para visualización */
+}
+
+.socials {
+  display: flex;
+  justify-content: center;
+  border: 1px solid rgb(0, 255, 115);
+}
+
+.socials section {
+  border: 1px solid rgb(255, 242, 0);
+
 }
