--- a/index.css
+++ b/index.css
@@ -1,57 +1,97 @@
-* {
+body {
   font-family: "Courier New", Courier, monospace;
   color: rgb(255, 255, 255);
-  background-color: #141947;
+  background-color: #000f33;
 }
 
-.hed {
-  margin-top: 10%;
+.fir {
+  margin-top: 5%;
+  margin-left: 25%;
+  margin-right: 25%;
+  justify-content: center;
+  /* border: 1px solid rgb(242, 255, 0); */
+}
+
+.fir section  {
+  margin: auto;
+  /* border: 1px solid rgb(255, 242, 0); */
+}
+
+.main {
   display: flex;
   justify-content: center;
   /* border: 1px solid rgb(0, 255, 115); */
-
 }
 
-.hed p {
-  font-size: 15px;
-  margin-top: 0px;
+.main h1 {
+  font-size: 40px;
+  margin-bottom: 0px;
 }
 
-.hed img {
+.main p {
+  font-size: 14px;
+  margin-top: 12px;
+}
+
+.main img {
   width: 180px;
+  height: 160px;
   margin-right: 10px;
   display: flex;
   float: left;
   border-radius: 90px;
 }
 
-.hed h1 {
-  font-size: 40px;
-  margin-bottom: 0px;
-}
-
-.hed section div {
-  margin: auto;
-  /* border: 1px solid rgb(255, 242, 0); */
-}
-
 table th {
   /* border: 1px solid rgb(255, 0, 0); */
 }
 
-.hed section {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-}
-
 .socials {
-  display: flex;
+  /* display: flex; */
   justify-content: center;
   /* border: 1px solid rgb(0, 255, 115); */
 }
 
-.socials section {
-  /* border: 1px solid rgb(255, 242, 0); */
+.socials p {
+  margin-bottom: 2%;
+}
 
+.socials section {
+  margin-left: 18%;
+  margin-right: 18%;
+  /* border: 1px solid rgb(255, 242, 0); */
+}
+
+.socials div {
+  display: flex;
+  justify-content: center;
+}
+
+.socials a{
+  margin-left: 4%;
+}
+
+.icons {
+  background-color: #1b1b34;
+  border-collapse: separate;
+  border-radius: 15px;
+  border: 1px solid white;
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
+  border-bottom-style: 2px;
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-top: 16px;
+  padding-bottom: 12px;
+  margin-left: 10px;
+  margin-bottom: 0px;
+  margin-top: 0px;
+  align-items: center;
+  transition-duration: 0.4s;
+}
+
+.icons:hover {
+  opacity: 0.7;
+  border-radius: 35%;
+  border: 2px solid white;
 }
