--- a/index.css
+++ b/index.css
@@ -64,7 +64,10 @@ table th {
 
 .socials div {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  font-size: 1vw;
+  flex-direction: row;
+  flex-wrap: nowrap;
 }
 
 .socials a{
@@ -75,7 +78,7 @@ table th {
   background-color: #1b1b34;
   border-collapse: separate;
   border-radius: 15px;
-  border: 1px solid white;
+  border: 2px solid white;
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-style: 2px;
