--- a/index.css
+++ b/index.css
@@ -9,18 +9,15 @@ body {
   margin-left: 25%;
   margin-right: 25%;
   justify-content: center;
-  /* border: 1px solid rgb(242, 255, 0); */
 }
 
 .fir section  {
   margin: auto;
-  /* border: 1px solid rgb(255, 242, 0); */
 }
 
 .main {
   display: flex;
   justify-content: center;
-  /* border: 1px solid rgb(0, 255, 115); */
 }
 
 .main h1 {
@@ -42,24 +39,22 @@ body {
   border-radius: 90px;
 }
 
-table th {
-  /* border: 1px solid rgb(255, 0, 0); */
-}
-
 .socials {
-  /* display: flex; */
   justify-content: center;
-  /* border: 1px solid rgb(0, 255, 115); */
 }
 
 .socials p {
-  margin-bottom: 2%;
+  padding: 6px;
+  width: 154px;
+  border: 1px solid white;
+  border-radius: 10px;
+  padding: 6px;
+  margin-bottom: 4%;
 }
 
 .socials section {
   margin-left: 18%;
   margin-right: 18%;
-  /* border: 1px solid rgb(255, 242, 0); */
 }
 
 .socials div {
@@ -72,6 +67,27 @@ table th {
 
 .socials a{
   margin-left: 4%;
+}
+
+.aboutMe{
+  justify-content: center;
+}
+
+.aboutMe section {
+  margin-left: 18%;
+  margin-right: 18%;
+}
+
+.aboutMe section p {
+  border: 1px solid white;
+  border-radius: 10px;
+  padding: 6px;
+}
+
+.aboutMe .me {
+  margin-top: 4%;
+  padding: 6px;
+  width: 96px;
 }
 
 .icons {
@@ -97,4 +113,10 @@ table th {
   opacity: 0.7;
   border-radius: 35%;
   border: 2px solid white;
+}
+
+footer{
+  position: static;
+  display: grid;
+  justify-content: center;
 }
